[package]
name = "ripple-address-codec"
version = "0.1.1"
authors = ["Stanislav Otovchits <otov4its@gmail.com>"]
description = "Encodes/decodes base58 encoded XRP Ledger identifiers"
license = "Apache-2.0"
repository = "https://github.com/otov4its/ripple-address-codec-rust/"
readme = "README.md"
keywords = ["ripple", "xrp", "cryptocurrencies", "encoding"]
categories = ["cryptography::cryptocurrencies", "encoding"]
edition = "2018"


[dependencies]
base-x = "0.2.8"
ring = "0.16.18"


[dev-dependencies]
hex = "0.4.2"
rand = "0.8.0"
